buildscript {
    ext.kotlin_version = "1.4.10"
    repositories {
        mavenLocal()
    }
    dependencies {
        classpath "us.eharning.gradle:gradle-defaults:2.1.2"
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

plugins {
    id 'java'
    id 'groovy'
    id 'maven'
}

apply plugin: 'kotlin'
apply plugin: 'us.eharning.gradle.defaults'

group = 'us.eharning.atomun'
description = 'Utility library implementing core support functionality.'
sourceCompatibility = 1.8

repositories {
    mavenLocal()
    jcenter()
}

spotbugs {
    toolVersion = '4.0.0-beta1'
}

dependencies {
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    compile 'net.jcip:jcip-annotations:1.0'
    compile 'com.github.spotbugs:spotbugs-annotations:4.0.0-beta4'
    compile 'com.google.code.findbugs:jsr305:3.0.2'

    compile 'org.bouncycastle:bcprov-jdk15on:1.66'

    testCompile 'org.codehaus.groovy:groovy:3.0.6'
    testCompile 'org.spockframework:spock-core:1.3-groovy-2.5'
    testCompile 'net.trajano.commons:commons-testing:2.1.0'
    testCompile 'org.yaml:snakeyaml:1.27'
}

configurations.all {
    resolutionStrategy {
        resolutionStrategy.dependencySubstitution {
            substitute(module("dom4j:dom4j"))
                    .because("Use newer dom4j packages")
                    .with(module("org.dom4j:dom4j:2.1.3"))

        }
        eachDependency { DependencyResolveDetails details ->
            //specifying a fixed version for groovy
            if (details.requested.group == 'org.codehaus.groovy') {
                details.useVersion '2.5.7'
            }
        }
    }
}

test {
    /* If in JDK 9 or higher, must mark illegal-access as denied */
    if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
        jvmArgs('--illegal-access=deny')
    }
}

javadoc {
    options.tags "todo:a:TODO:"
}

apply from: "$rootDir/gradle/maven-publish.gradle"

wrapper {
    gradleVersion = '5.4.1'
}
